@@ -1,3 +1,8 @@
+(04/05/16)
+==========
+
+· Added Let's Encrypt on web server
+
 (18/04/16)
 ==========
 
